# nix-experiments

./: README.md  markanix.nix  nix-instantiate.nix  nixaby.nix  nixel
activate/: resource.json
android-vm/: README.md  default.nix  run  ssh
build-support/: mkProfile.nix
devenv-light/: README.md  flake-module.nix  flake.nix
fetch/: README.md  default.nix  test.nix
nix-patch/: .gitignore  Makefile  README.md  devshell.nix  go.sum  main.go  nix-patch.sh  nixe.sh
nix-sandbox/: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md  TODO.md  devshell.nix  flake.nix  formatter.nix  package.nix
nix-sandbox/checks/: integration-test.nix  vm-test.nix
nix-sandbox/src/: cache.rs  cli.rs  config.rs  constants.rs  environment.rs  error.rs  lib.rs  main.rs  session.rs
nix-sandbox/src/sandbox/: linux.rs  macos.rs  mod.rs
nix-sandbox/tests/: integration_cache.rs  integration_git.rs  integration_isolation.rs  integration_sandbox.rs
nix-service/: README.md  service.nix
nix-snapshot/: README.md  lib.nix  nix-snapshot  snapshot-in-drv.nix  snapshot-test.nix  snapshot.nix
nix-stdlib/: asserts.nix  builtins.txt  default.nix  generic.nix  imports.nix  overlay.nix  toNix.nix
nix-store-edit/: CLAUDE.md  devshell.nix  go.mod  package.nix
nix-trampoline/: CLAUDE.md  README.md  devshell.nix  hello.nix  nix-trampoline.sh  test.sh
nixpkgs-image/: README.md  flake.nix
pure-nix/: README.md  fetchurl-test.nix  fetchurl.nix  mkUserEnvironment-text.nix  mkUserEnvironment.nix  toNix-test.nix  toNix.nix  writeText-test.nix  writeText.nix
rehash/: README.md  default.nix  (+2 more)
(+221 files in other folders)
