[package]
name = "nix-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Nix Sandbox Contributors"]
description = "Secure, reproducible development environments using Nix"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
which = "6.0"
tempfile = "3.10"
sha2 = "0.10"
hex = "0.4"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "user"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
tempdir = "0.3"
serial_test = "3.1"

[[bin]]
name = "nix-sandbox"
path = "src/main.rs"